--- a/compass/sass/configs/_variables.scss
+++ b/compass/sass/configs/_variables.scss
@@ -2,6 +2,16 @@
 // _VARIABLES.SCSS
 // SASS Variables
 // -------------------------------
+$mainBgImg: url('../images/bckgrnd.jpeg');
+$lineHeightParent: 30px;
+$lineHeightChildren: 20px;
+
+$numColumns: 4;
+$width: 1200px;
+$margin: 10px;
+
+
+
 
 // COLORS
 // -------------------------------
